new item and a bunch of otehr stuff

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,5 +3,6 @@
   "rock_small": "small rock",
   "rock_medium": "rock",
   "rock_large": "large rock",
-  "tree": "tree"
+  "tree": "tree",
+  "sand": "sand"
 }
